# cortex

./: .gitignore  AGENTIC_RL.md  README.md  __init__.py  app.py  cortex_training_colab.ipynb  pyproject.toml  test_qdrant_conn.py  test_qdrant_upsert.py  verify_rag.py
docs/: corext_pitch_deck_notebooklm.md
examples/: cem_full_workflow.py  create_something.py  heat_conduction_plate.py  quick_test.py  rocket_nozzle.py
geometry/: __init__.py  integration.py
geometry/core/: Base.py  CSG.py  Voxel.py  __init__.py
geometry/math/: Vector.py
geometry/shapes/: Lattice.py  Primitives.py  Profile.py  __init__.py
knowledge/: __init__.py  design_patterns.py  materials.py  physics_rules.py
knowledge/rag/: ingestor.py  vector_db.py
knowledge/rag/scrapers/: aerospace_materials.py  engineering_toolbox.py  physics_knowledge.py
pipeline/: __init__.py  engine.py  executor.py  router.py
solvers/: __init__.py  base.py  coupled.py  fluid.py  optimizer.py  structural.py  thermal.py
tuner/: base_tuner.py  cli.py  registry.py
tuner/tasks/: __init__.py  frozen_lake.py  frozen_lake_sample.jsonl  math_agent.py
