[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-cem"
version = "0.1.0"
description = "Cortex: Computational ORchestration for Technical Engineering eXecution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Vikash Vardhan"}
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-image>=0.20.0",
    "matplotlib>=3.7.0",
    "anthropic>=0.18.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "torch>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests",
    "sentence-transformers",
    "agentscope",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
cortex-tuner = "tuner.cli:main"

[tool.setuptools]
packages = ["tuner", "solvers", "knowledge", "pipeline", "geometry"]
